# RUST-acad

./: .gitignore  .markdown-link-check.json  README.md
.github/workflows/: ci.yml
0_basics/: README.md
1_concepts/: README.md
1_concepts/1_1_default_clone_copy/src/: main.rs
1_concepts/1_2_box_pin/: Cargo.toml  README.md
1_concepts/1_2_box_pin/src/: main.rs
1_concepts/1_3_rc_cell/: README.md
1_concepts/1_3_rc_cell/src/: main.rs
1_concepts/1_4_cow/: Cargo.toml  README.md
1_concepts/1_4_cow/src/: main.rs
1_concepts/1_5_convert_cast_deref/: Cargo.toml  README.md
1_concepts/1_5_convert_cast_deref/src/: main.rs
1_concepts/1_6_dispatch/: README.md
1_concepts/1_6_dispatch/src/: lib.rs  main.rs
1_concepts/1_7_sized/: Cargo.toml  README.md
1_concepts/1_7_sized/src/: main.rs
1_concepts/1_8_thread_safety/: README.md
1_concepts/1_8_thread_safety/src/: main.rs
1_concepts/1_9_phantom/: README.md
1_concepts/1_9_phantom/src/: main.rs
1_concepts/src/: main.rs
2_idioms/: README.md
2_idioms/2_1_type_safety/: Cargo.toml  README.md
2_idioms/2_1_type_safety/src/: main.rs
2_idioms/2_2_mem_replace/: README.md
2_idioms/2_2_mem_replace/src/: main.rs
2_idioms/2_3_bound_impl/: README.md
2_idioms/2_3_bound_impl/src/: main.rs
2_idioms/2_4_generic_in_type_out/: README.md
2_idioms/2_4_generic_in_type_out/src/: main.rs
2_idioms/2_5_exhaustivity/: README.md
2_idioms/2_5_exhaustivity/src/: lib.rs
2_idioms/2_6_sealing/: README.md
2_idioms/2_6_sealing/src/: lib.rs  my_error.rs  my_iterator_ext.rs
2_idioms/src/: main.rs
3_ecosystem/: Cargo.toml  README.md
3_ecosystem/3_10_threads/: Cargo.toml  README.md
3_ecosystem/3_10_threads/src/: main.rs
3_ecosystem/3_11_async/: Cargo.toml  README.md  urls.txt
3_ecosystem/3_11_async/src/: main.rs
3_ecosystem/3_1_testing/: Cargo.toml  README.md
3_ecosystem/3_1_testing/fuzz/: Cargo.toml
3_ecosystem/3_1_testing/fuzz/fuzz_targets/: fuzz_parse_secret.rs
3_ecosystem/3_1_testing/src/: main.rs
3_ecosystem/3_2_macro/: Cargo.toml  README.md
3_ecosystem/3_2_macro/src/: lib.rs  main.rs
3_ecosystem/3_3_date_time/: Cargo.toml  README.md
3_ecosystem/3_3_date_time/src/: main.rs
3_ecosystem/3_4_regex_parsing/: Cargo.toml  README.md
3_ecosystem/3_4_regex_parsing/src/: main.rs
3_ecosystem/3_5_collections/: Cargo.toml  README.md
3_ecosystem/3_5_collections/src/: main.rs
3_ecosystem/3_6_serde/: Cargo.toml  README.md
3_ecosystem/3_6_serde/src/: main.rs
3_ecosystem/3_7_rand_crypto/: Cargo.toml  README.md  example.txt
3_ecosystem/3_7_rand_crypto/src/: main.rs
3_ecosystem/3_8_log/: Cargo.toml  README.md
3_ecosystem/3_8_log/src/: main.rs
3_ecosystem/3_9_cmd_env_conf/: Cargo.toml  README.md  config.toml
3_ecosystem/3_9_cmd_env_conf/src/: main.rs
3_ecosystem/src/: config.rs  downloader.rs  input.rs  main.rs  processor.rs  runner.rs
4_backend/4_1_db/: .env.example  Cargo.toml  README.md
4_backend/4_1_db/migrations/: 0002_constraints.sql
4_backend/4_1_db/src/: cli.rs  main.rs  models.rs
4_backend/4_1_db/src/db/: roles.rs  users.rs
4_backend/4_2_http/: Cargo.toml  README.md
4_backend/4_2_http/migrations/: 0002_constraints.sql
4_backend/4_2_http/src/: lib.rs
4_backend/4_2_http/src/db/: roles.rs  users.rs
4_backend/4_3_api/: .env.example  Cargo.toml  README.md
4_backend/4_3_api/migrations/: 0001_initial.sql  0002_constraints.sql
4_backend/4_3_api/src/: lib.rs
4_backend/4_3_api/src/db/: roles.rs  users.rs
