[package]
name = "step_3_9"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
config = { version = "0.15.22", features = ["toml"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
log = "0.4.29"
