[package]
name = "step_4_1"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "step_4_1"
path = "src/main.rs"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "json"] }
tokio = { version = "1.52", features = ["full"] }
clap = { version = "4.6", features = ["derive"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
dotenvy = "0.15"
