[package]
name = "step_4_2"
version = "0.1.0"
edition = "2024"
publish = false

# ── Binaries ──────────────────────────────────────────────────────────────────

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

# ── Dependencies ──────────────────────────────────────────────────────────────

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "json"] }
tokio = { version = "1.52", features = ["full"] }
clap = { version = "4.6", features = ["derive"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
dotenvy = "0.15"

# HTTP server
axum = { version = "0.8.9", features = ["json"] }
tower = "0.5.3"

# HTTP client
reqwest = { version = "0.13.3", features = ["json"] }

[dev-dependencies]
proptest = "1.11.0"
http-body-util = "0.1.3"
tower = { version = "0.5.3", features = ["util"] }
