[package]
name = "step_4_3"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
# Async runtime
tokio = { version = "1.52.1", features = ["full"] }

# Web framework
axum = { version = "0.8.9", features = ["macros"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }

# OpenAPI
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "migrate", "uuid", "chrono"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"


# HTTP client (for CLI)
reqwest = { version = "0.13.3", features = ["json"] }

# CLI
clap = { version = "4.6.1", features = ["derive", "env"] }

# Validation
garde = { version = "0.20", features = ["derive", "email"] }

# Utilities
uuid = { version = "1.23.1", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde", ] }
anyhow = "1.0.102"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
dotenvy = "0.15.7"
http-body-util = "0.1.3"

[dev-dependencies]
futures = "0.3"
rand = "0.8"